--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <header id="home" style="max-height: 38rem;">
             <div class="section__container header__container">
               <div class="header__content small_screen">
-                <h1 class="font-style-new">Experience Wellness at Your Fingertips with Our Yoga App</h1>
+                <h1 class="font-style-new">vivek singh testing  Experience Wellness at Your Fingertips with Our Yoga App</h1>
                 <h2 class="font-style-new-1">"Achieve harmony of mind and body with our accessible yoga platform. From quick stretches to full sessions, access tailored practices for your schedule. Embrace wellness effortlessly with us."</h2>
                 <a href="Contact.html" class="alink">Enroll Now @799 /- only</a>
               </div>
