main-page-desgin

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <header id="home" style="max-height: 38rem;">
             <div class="section__container header__container">
               <div class="header__content small_screen">
-                <h1 class="font-style-new">vivek singh testing  Experience Wellness at Your Fingertips with Our Yoga App</h1>
+                <h1 class="font-style-new">Experience Wellness at Your Fingertips with Our Yoga App</h1>
                 <h2 class="font-style-new-1">"Achieve harmony of mind and body with our accessible yoga platform. From quick stretches to full sessions, access tailored practices for your schedule. Embrace wellness effortlessly with us."</h2>
                 <a href="Contact.html" class="alink">Enroll Now @799 /- only</a>
               </div>
@@ -231,15 +231,15 @@
     <section class="banner m-b-5 p-5">
       <div class="section__container banner__container">
         <div class="banner__card">
-          <h4>5,000</h4>
+          <h4>5,00</h4>
           <p>Happy Customers</p>
         </div>
         <div class="banner__card">
-          <h4>450</h4>
+          <h4>45</h4>
           <p>Yoga Workshops</p>
         </div>
         <div class="banner__card">
-          <h4>5</h4>
+          <h4>2</h4>
           <p>Years of Experience</p>
         </div>
         <div class="banner__card">
@@ -286,10 +286,10 @@
             </p>
           </div>
           <div class="stories__author">
-            <img src="assets/stories-1.jpg" alt="author" />
+            <img class="image-circle" src="assets/photos-3.jpg" alt="author" />
             <div class="stories__author__details">
-              <h4>Emily Williams</h4>
-              <h6>Trainer</h6>
+              <h4>Riya Srivastava</h4>
+              <h6>User</h6>
             </div>
           </div>
         </div>
@@ -303,10 +303,10 @@
             </p>
           </div>
           <div class="stories__author">
-            <img src="assets/stories-2.jpg" alt="author" />
+            <img class="image-circle" src="assets/front-view-man-meditating-outdoors.jpg" alt="author" />
             <div class="stories__author__details">
-              <h4>Ava Johnson</h4>
-              <h6>Member</h6>
+              <h4>Ali Sharma</h4>
+              <h6>User</h6>
             </div>
           </div>
         </div>
@@ -320,76 +320,33 @@
             </p>
           </div>
           <div class="stories__author">
-            <img src="assets/stories-3.jpg" alt="author" />
+            <img class="image-circle" src="assets/stories-3.jpg" alt="author" />
             <div class="stories__author__details">
               <h4>Sophia Smith</h4>
-              <h6>Member</h6>
+              <h6>User</h6>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <footer class="new_footer_area bg_color">
-      <div class="new_footer_top">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-4 col-md-6">
-                      <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                          <p>Don’t miss any updates of our new templates and extensions.!</p>
-                          <form action="https://api.web3forms.com/submit" method="POST" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                            <input type="hidden" name="access_key" value="54dc8880-0465-4b60-b615-5d8ee23b1660">
-                              <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                              <div class="h-captcha" data-captcha="true"></div>
-                              <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                              <p class="mchimp-errmessage" style="display: none;"></p>
-                              <p class="mchimp-sucmessage" style="display: none;"></p>
-                          </form>
-                      </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6">
-                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Quick Links</h3>
-                          <ul class="list-unstyled f_list">
-                              <li><a class="text-decor" href="index.html">Home</a></li>
-                              <li><a class="text-decor" href="classes.html">Classes</a></li>
-                              <li><a class="text-decor" href="Memebership.html">Membership</a></li>
-                              <li><a class="text-decor" href="Stories.html">About</a></li>
-                              <li><a class="text-decor" href="Blog.html">Blog</a></li>
-                              <li><a class="text-decor" href="Contact.html">Contact</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-lg-4 col-md-6">
-                      <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-                          <ul class="list-unstyled f_list">
-                            <li><a class="text-decor" href="mailto:support@yogfitz.com">Reach Out to us at support@yogfitz.com</a></li>
-                              <li><a class="text-decor" href="Contact.html">Term &amp; conditions</a></li>
-                              <li><a class="text-decor" href="Contact.html">Reporting</a></li>
-                              <li><a class="text-decor" href="Contact.html">Support Policy</a></li>
-                              <li><a class="text-decor" href="Contact.html">Privacy</a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="footer_bg">
-              <div class="footer_bg_one"></div>
-              <div class="footer_bg_two"></div>
-          </div>
-      </div>
-      <div class="footer_bottom">
-          <div class="container">
-              <div class="row align-items-center">
-                  <div class="col-lg-6 col-sm-7">
-                      <p class="mb-0 f_400">© YogFitz Inc.. 2022 All rights reserved.</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+
+
+      <html>
+      <head>
+        <script src="jquery.js"></script>
+        <script>
+          $(function () {
+            $("#includedContent").load("footer.html");
+          });
+        </script>
+      </head>
+      
+      <body>
+        <div id="includedContent"></div>
+      </body>
+      
+      </html>
 
 
 
