--- a/Memebership.html
+++ b/Memebership.html
@@ -7,6 +7,14 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+          <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+      <!-- jQuery library -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+      <!-- Latest compiled JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Web Design Mastery | Yogalax</title>
@@ -27,7 +35,7 @@
       </ul>
     </nav>
     <header id="home">
-      <div class="section__container header__container">
+      <div class="section__container header__container row">
         <div class="header__content">
           <h1>Effective YOGA</h1>
           <h2>Do yoga today for better tomorrow</h2>
@@ -44,38 +52,45 @@
         <div class="section__container membership__container">
           <p class="section__subheader">PRICING TABLE</p>
           <h2 class="section__header">Membership Cards</h2>
-          <div class="membership__grid">
-            <div class="membership__card">
+          <div class="membership__grid container row">
+            <div class="membership__card col-lg-3 col-md-12">
+              <div>
+                  
+                  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+                  <div class="app-download">
+                      <label id="first-title">Best Seller</label>
+                  </div>  
+            </div>
+                  <h4>MONTH CARD</h4>
+                  <h2><sup>₹</sup>699</h2>
+                  <h3>For 1 Month</h3>
+                  <h4>Benefits</h4>
+                  <p>Flexible Timing</p>
+                  <p>Group trainer</p>
+                  <p>Live & Interactive Classes</p>
+                  <p>Doubt Session</p>
+                  <button class="btn membership__btn">GET STARTED</button>
+            </div>
+            <div class="membership__card col-lg-3 col-md-12">
+              <h4>3 MONTH CARD</h4>
+              <h2><sup>₹</sup>1799</h2>
+              <h3>For 3 Month</h3>
+              <h4>ALL THE FEATURES OF MONTHLY PLAN <i>plus</i></h4>
+              <p>Dedicated Batch</p>
+              <p>Personal Sessions</p>
+              <p>Fitness Goal Setting</p>
+              <p>Diet Chart</p>
+              <button class="btn membership__btn">GET STARTED</button>
+            </div>
+            <div class="membership__card col-lg-3 col-md-12">
               <h4>YEAR CARD</h4>
-              <h2><sup>$</sup>499</h2>
-              <h3>For 1 Year</h3>
-              <h4>ENJOY ALL THE FEATURES</h4>
-              <p>Onetime access to all club</p>
-              <p>Group trainer</p>
-              <p>Book a group class</p>
-              <p>Fitness orientation</p>
-              <button class="btn membership__btn">GET STARTED</button>
-            </div>
-            <div class="membership__card">
-              <h4>MONTHLY CARD</h4>
-              <h2><sup>$</sup>200</h2>
-              <h3>For 1 Month</h3>
-              <h4>ENJOY ALL THE FEATURES</h4>
-              <p>Group classes</p>
-              <p>Discuss fitness goals</p>
-              <p>Group trainer</p>
-              <p>Fitness orientation</p>
-              <button class="btn membership__btn">GET STARTED</button>
-            </div>
-            <div class="membership__card">
-              <h4>WEEKLY CARD</h4>
-              <h2><sup>$</sup>85</h2>
-              <h3>For 1 Week</h3>
-              <h4>ENJOY ALL THE FEATURES</h4>
-              <p>Access to yoga area</p>
-              <p>Group trainer</p>
-              <p>Group classes</p>
-              <p>Fitness orientation</p>
+              <h2><sup>₹</sup>6999</h2>
+              <h3>For 1 YEAR</h3>
+              <h4>ALL FEATURES</h4>
+              <p>Premium Trainers</p>
+              <p>Dedicated Batch</p>
+              <p>Personlized Health Planning</p>
+              <p>Many More...</p>
               <button class="btn membership__btn">GET STARTED</button>
             </div>
           </div>
