add-logo-on-tab

--- a/Contact.html
+++ b/Contact.html
@@ -18,14 +18,15 @@
   <link rel="stylesheet" href="contact.css" />
   <link rel="stylesheet" href="contactcard.css" />
   <script src="https://unpkg.com/scrollreveal"></script>
-  <title>Web Design Mastery | Yogalax</title>
+  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <title>YogFitz</title>
 </head>
 
 <body>
   <nav>
     <div class="nav__logo">
       <img src="assets/logo.png" alt="logo" />
-      <span>YOGALAX</span>
+      <span>YOGFITZ</span>
     </div>
     <ul class="nav__links">
       <li class="link"><a href="index.html">Home</a></li>
