--- a/Blog.html
+++ b/Blog.html
@@ -9,7 +9,8 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Web Design Mastery | Yogalax</title>
+    <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+    <title>YogFitz</title>
   </head>
   <body>
     <nav>
