--- a/Memebership.html
+++ b/Memebership.html
@@ -17,7 +17,8 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Web Design Mastery | Yogalax</title>
+    <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+    <title>YogFitz</title>
   </head>
   <body>
     <nav>
