--- a/classes.html
+++ b/classes.html
@@ -1,50 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="icon" href="assets/logo.png" type="image/x-icon" />
-    <title>YogFitz</title>
-  </head>
-  <body>
-    <nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <title>YogFitz</title>
+</head>
+<body>
+  <nav id="screensize" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
       <div class="nav__logo">
         <img src="assets/logo.png" alt="logo" />
-        <span>YOGALAX</span>
+        <span>YOGFITZ</span>
       </div>
-      <ul class="nav__links">
-        <li class="link"><a href="index.html">Home</a></li>
-        <li class="link"><a href="classes.html">Classes</a></li>
-        <li class="link"><a href="Memebership.html">Membership</a></li>
-        <li class="link"><a href="Stories.html">About</a></li>
-        <li class="link"><a href="Blog.html">Blog</a></li>
-        <li class="link"><a href="Contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <header id="home">
-      <div class="section__container header__container">
-        <div class="header__content">
-          <h1>Effective YOGA</h1>
-          <h2>Do yoga today for better tomorrow</h2>
-          <button class="btn">15 Days free trial</button>
-        </div>
-        <div class="header__image">
-          <img src="assets/header.jpg" alt="header" />
-        </div>
+
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          <li class="nav-link link active"><a href="index.html">Home</a></li>
+          </li>
+          <li class="nav-item link">
+          <li class="nav-link link"><a href="classes.html">Classes</a></li>
+          </li>
+          <li class="nav-item">
+          <li class="nav-link link"><a href="Memebership.html">Membership</a></li>
+          </li>
+
+          <li class="nav-item">
+          <li class="nav-link link"><a href="Memebership.html">Membership</a></li>
+          </li>
+
+          <li class="nav-item">
+          <li class="nav-link link"><a href="Stories.html">About</a></li>
+          </li>
+
+          <li class="nav-item">
+          <li class="nav-link link"><a href="Blog.html">Blog</a></li>
+
+          </li>
+          <li class="nav-item">
+          <li class="nav-link link"><a href="Contact.html">Contact</a></li>
+          </li>
+        </ul>
       </div>
-    </header>
+    </div>
+  </nav>
 
 
 
+  <nav id="screensizebig">
+    <div class="nav__logo">
+      <img src="assets/logo.png" alt="logo" />
+      <span>YOGFITZ</span>
+    </div>
+
+    <ul class="nav__links">
+      <li class="link"><a href="index.html">Home</a></li>
+      <li class="link"><a href="classes.html">Classes</a></li>
+      <li class="link"><a href="Memebership.html">Membership</a></li>
+      <li class="link"><a href="Stories.html">About</a></li>
+      <li class="link"><a href="Blog.html">Blog</a></li>
+      <li class="link"><a href="Contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
 
-<section class="section__container classes__container" id="classes">
+  <div id="carouselExampleIndicators" class="carousel slide m-b-5 " data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+        <header id="home" style="max-height: 38rem;">
+          <div class="section__container header__container">
+            <div class="header__content small_screen">
+              <h1 class="font-style-new">Experience Wellness at Your Fingertips with Our Yoga App</h1>
+              <h2 class="font-style-new-1">"Achieve harmony of mind and body with our accessible yoga platform. From
+                quick stretches to full sessions, access tailored practices for your schedule. Embrace wellness
+                effortlessly with us."</h2>
+              <a href="Contact.html" class="alink">Enroll Now @799 /- only</a>
+            </div>
+            <div class="header__image">
+              <img style="margin-bottom: 10px;" src="assets/studio-shot-young-fit-woman-doing-yoga-exercises.jpg"
+                alt="header" />
+            </div>
+          </div>
+        </header>
+      </div>
+
+
+      <div class="carousel-item ">
+        <header class="home" style="max-height: 38rem;">
+          <div class="section__container header__container">
+            <div class="header__content small_screen">
+              <h1 class="font-style-new">"Transform Your Life with Our Online Yoga Classes"</h1>
+              <h2 class="font-style-new-1">
+                Discover holistic wellness through convenient online yoga. With expert guidance and diverse class
+                options, find balance and strength in just minutes a day. Join our community for mindful movement,
+                wherever you are.
+              </h2>
+              <a href="Contact.html" class="alink">Enroll Now @799 /- only</a>
+            </div>
+            <div class="header__image">
+              <img class="small_screen_image" style="height: 38rem; width: 100%;"
+                src="assets/young-fit-woman-doing-yoga-exercises.jpg" alt="header" />
+            </div>
+          </div>
+        </header>
+      </div>
+
+      <div class="carousel-item">
+        <header class="home" style="max-height: 38rem;">
+          <div class="section__container header__container">
+            <div class="header__content small_screen">
+              <h1 class="font-style-new">"Discover the Power of Yoga Anywhere, Anytime!"</h1>
+              <h2 class="font-style-new-1">
+                "Experience the transformative benefits of yoga with our convenient app. Explore a variety of practices
+                to suit your needs and schedule. Begin your path to well-being today, on your terms."
+              </h2>
+              <a href="Contact.html" class="alink">Enroll Now @799 /- only</a>
+            </div>
+            <div class="header__image">
+              <img style="height: 38rem; width: 100%;" src="assets/woman-doing-yoga-home.jpg" alt="header" />
+            </div>
+          </div>
+        </header>
+      </div>
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+  <section class="section__container classes__container" id="classes">
     <p class="section__subheader">YOGA CLASSES</p>
     <h2 class="section__header">Choose Your Level & Focus</h2>
     <div class="classes__grid">
@@ -88,7 +209,17 @@
   </section>
 
 
-  
+
+  <script>
+    if (window.innerWidth > 768) {
+      let parentTagRemove = document.getElementById('screensize');
+      parentTagRemove.style.display = 'none';
+    } else {
+      let parentTagRemove = document.getElementById('screensizebig');
+      parentTagRemove.style.display = 'none';
+    }
+  </script>
   <script src="main.js"></script>
 </body>
+
 </html>
