--- a/index.html
+++ b/index.html
@@ -349,16 +349,20 @@
       
       </html>
 
-
-
-    <script>
-      if (window.innerWidth > 768) {
-        let parentTagRemove = document.getElementById('screensize');
-        parentTagRemove.style.display = 'none';
-      }else{
-        let parentTagRemove = document.getElementById('screensizebig');
-        parentTagRemove.style.display = 'none';
-      }
-    </script>
+      <script>
+        document.addEventListener('DOMContentLoaded', function() {
+          if (window.innerWidth > 768) {
+            let parentTagRemove = document.getElementById('screensize');
+            if (parentTagRemove) {
+              parentTagRemove.style.display = 'none';
+            }
+          } else {
+            let parentTagRemove = document.getElementById('screensizebig');
+            if (parentTagRemove) {
+              parentTagRemove.style.display = 'none';
+            }
+          }
+        });
+      </script>
   </body>
 </html>
