add-margin-top-for-carousal

--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
   </nav>
 
   <header id="home">
-    <div class="section__container header__container">
+    <div class="section__container header__container" style="margin-top: 12px;">
       <div class="header__content">
 
         <h1 class="small_screen font-style-contact-new"></h1>
