--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </li>
 
             <li class="nav-item">
-              <li class="nav-link link"><a href="Stories.html">About</a></li>
+              <li class="nav-link link"><a href="aboutus.html">About</a></li>
             </li>
 
             <li class="nav-item">
@@ -78,7 +78,7 @@
         <li class="link"><a href="index.html">Home</a></li>
         <li class="link"><a href="classes.html">Classes</a></li>
         <li class="link"><a href="Memebership.html">Membership</a></li>
-        <li class="link"><a href="Stories.html">About</a></li>
+        <li class="link"><a href="aboutus.html">About</a></li>
         <li class="link"><a href="Blog.html">Blog</a></li>
         <li class="link"><a href="Contact.html">Contact</a></li>
       </ul>
