--- a/Memebership.html
+++ b/Memebership.html
@@ -171,17 +171,12 @@
     <div class="section__container membership__container">
       <p class="section__subheader">PRICING TABLE</p>
       <h2 class="section__header">Membership Cards</h2>
-      <div class="membership__grid container row">
-        <div class="membership__card col-lg-3 col-md-12">
-          <div>
+      <div class="membership__grid container row" style="margin-left: 4rem;">
 
-            <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-              integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-              crossorigin="anonymous">
-            <div class="app-download">
-              <label id="first-title">Best Seller</label>
-            </div>
-          </div>
+        <div class="membership__card col-lg-3 col-md-12">
+          <div class="app-download">
+            <label id="first-title">Best Seller</label>
+          </div> 
           <h4>MONTH CARD</h4>
           <h2><sup>₹</sup>699</h2>
           <h3>For 1 Month</h3>
@@ -190,9 +185,9 @@
           <p>Group trainer</p>
           <p>Live & Interactive Classes</p>
           <p>Doubt Session</p>
-          <button class="btn membership__btn">GET STARTED</button>
+          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
         </div>
-        <div class="membership__card col-lg-3 col-md-12">
+        <div class="membership__card col-lg-4 col-md-12">
           <h4>3 MONTH CARD</h4>
           <h2><sup>₹</sup>1799</h2>
           <h3>For 3 Month</h3>
@@ -201,7 +196,7 @@
           <p>Personal Sessions</p>
           <p>Fitness Goal Setting</p>
           <p>Diet Chart</p>
-          <button class="btn membership__btn">GET STARTED</button>
+          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
         </div>
         <div class="membership__card col-lg-3 col-md-12">
           <h4>YEAR CARD</h4>
@@ -212,11 +207,28 @@
           <p>Dedicated Batch</p>
           <p>Personlized Health Planning</p>
           <p>Many More...</p>
-          <button class="btn membership__btn">GET STARTED</button>
+          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
         </div>
       </div>
     </div>
+    <div class="memberShipFooter">
+    </div>
   </section>
+  <html>
+      <head>
+        <script src="jquery.js"></script>
+        <script>
+          $(function () {
+            $("#includedContent").load("footer.html");
+          });
+        </script>
+      </head>
+      
+      <body>
+        <div id="includedContent"></div>
+      </body>
+      
+      </html>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
