footer on classes

--- a/classes.html
+++ b/classes.html
@@ -208,7 +208,21 @@
     </div>
   </section>
 
-
+  <html>
+    <head>
+      <script src="jquery.js"></script>
+      <script>
+        $(function () {
+          $("#includedContent").load("footer.html");
+        });
+      </script>
+    </head>
+    
+    <body>
+      <div id="includedContent"></div>
+    </body>
+    
+</html>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
