--- a/Contact.html
+++ b/Contact.html
@@ -19,24 +19,13 @@
   <link rel="stylesheet" href="contactcard.css" />
   <script src="https://unpkg.com/scrollreveal"></script>
   <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>YogFitz</title>
 </head>
 
 <body>
-  <nav>
-    <div class="nav__logo">
-      <img src="assets/logo.png" alt="logo" />
-      <span>YOGFITZ</span>
-    </div>
-    <ul class="nav__links">
-      <li class="link"><a href="index.html">Home</a></li>
-      <li class="link"><a href="classes.html">Classes</a></li>
-      <li class="link"><a href="Memebership.html">Membership</a></li>
-      <li class="link"><a href="Stories.html">About</a></li>
-      <li class="link"><a href="Blog.html">Blog</a></li>
-      <li class="link"><a href="Contact.html">Contact</a></li>
-    </ul>
-  </nav>
+
+  <div id="includedNavbar"></div>
 
   <header id="home">
     <div class="section__container header__container" style="margin-top: 12px;">
