--- a/classes.html
+++ b/classes.html
@@ -21,70 +21,9 @@
   <title>YogFitz</title>
 </head>
 <body>
-  <nav id="screensize" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <div class="nav__logo">
-        <img src="assets/logo.png" alt="logo" />
-        <span>YOGFITZ</span>
-      </div>
-
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-          <li class="nav-link link active"><a href="index.html">Home</a></li>
-          </li>
-          <li class="nav-item link">
-          <li class="nav-link link"><a href="classes.html">Classes</a></li>
-          </li>
-          <li class="nav-item">
-          <li class="nav-link link"><a href="Memebership.html">Membership</a></li>
-          </li>
-
-          <li class="nav-item">
-          <li class="nav-link link"><a href="Memebership.html">Membership</a></li>
-          </li>
-
-          <li class="nav-item">
-          <li class="nav-link link"><a href="Stories.html">About</a></li>
-          </li>
-
-          <li class="nav-item">
-          <li class="nav-link link"><a href="Blog.html">Blog</a></li>
-
-          </li>
-          <li class="nav-item">
-          <li class="nav-link link"><a href="Contact.html">Contact</a></li>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-
-
-  <nav id="screensizebig">
-    <div class="nav__logo">
-      <img src="assets/logo.png" alt="logo" />
-      <span>YOGFITZ</span>
-    </div>
-
-    <ul class="nav__links">
-      <li class="link"><a href="index.html">Home</a></li>
-      <li class="link"><a href="classes.html">Classes</a></li>
-      <li class="link"><a href="Memebership.html">Membership</a></li>
-      <li class="link"><a href="Stories.html">About</a></li>
-      <li class="link"><a href="Blog.html">Blog</a></li>
-      <li class="link"><a href="Contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-
+ 
+  <div id="includedNavbar"></div>
+  
   <div id="carouselExampleIndicators" class="carousel slide m-b-5 " data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -208,37 +147,13 @@
     </div>
   </section>
 
-  <html>
-    <head>
-      <script src="jquery.js"></script>
-      <script>
-        $(function () {
-          $("#includedContent").load("footer.html");
-        });
-      </script>
-    </head>
+ 
     
     <body>
       <div id="includedContent"></div>
     </body>
-    
-</html>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      if (window.innerWidth > 768) {
-        let parentTagRemove = document.getElementById('screensize');
-        if (parentTagRemove) {
-          parentTagRemove.style.display = 'none';
-        }
-      } else {
-        let parentTagRemove = document.getElementById('screensizebig');
-        if (parentTagRemove) {
-          parentTagRemove.style.display = 'none';
-        }
-      }
-    });
-  </script>
+
   <script src="main.js"></script>
 </body>
 
