--- a/Contact.html
+++ b/Contact.html
@@ -4,12 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="./style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+   <!-- navbar imports -->
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet"> 
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+   <link rel="stylesheet" href="about.css">
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+   <!-- navbar import ends -->
 
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
@@ -25,7 +30,51 @@
 
 <body>
 
-  <div id="includedNavbar"></div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light main-header sticky-top">
+    <div class="container-fluid">
+  
+      <a class="navbar-brand logo-size" href="index.html">
+        <img src="assets/logo.png" alt="">
+        <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  
+        <ul class="navbar-nav ml-auto our-primary-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="classes.html">Classes</a></li>
+          <li><a href="Memebership.html">Membership</a></li>
+          <li><a href="Stories.html">About</a></li>
+          <li><a href="Blog.html">Blog</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+  
+        <div class="header-info d-flex align-items-center">
+          <div class="header-search">
+  
+          </div>
+          <div class="header-call clearfix">
+            <div class="header-call-icon float-left mr-3 h-100">
+              <span> <i class="fas fa-phone-volume"></i> </span>
+            </div>
+            <div class="header-call-info">
+              <span class="d-block">Call Now</span>
+              <a class="d-block" href="tel:+15143125678">+1 (514) 312-5678</a>
+            </div>
+          </div>
+          <div class="header-button">
+            <a href="Contact.html#contactform" class="btn-contact btn-primary-contact">Enroll Now</a>
+          </div>
+        </div>
+  
+      </div>
+  
+    </div>
+  </nav>
 
   <header id="home">
     <div class="section__container header__container" style="margin-top: 12px;">
@@ -197,6 +246,12 @@
   <script src="https://web3forms.com/client/script.js" async defer></script>
   <script src="app.js"></script>
   <script src="main.js"></script>
+  <script>
+    var currentPage = window.location.href;
+    if (currentPage.includes("Contact.html")) {
+        document.querySelector('.header-button a').classList.add('btn-success');
+      }
+  </script>
 </body>
 
 </html>
