--- a/Blog.html
+++ b/Blog.html
@@ -220,6 +220,9 @@
     </div>
   </section>
 
+  <body>
+    <div id="includedContent"></div>
+  </body>
 
   <script src="footer.js"></script>
 </body>
