--- a/Contact.html
+++ b/Contact.html
@@ -98,45 +98,27 @@
         <div class="card">
           <img src="assets/new2user1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Leanne Graham</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, neque.</p>
+            <h5 class="card-title">Albert John</h5>
+            <p class="card-text">Hello Guys! If you are want to improve in your fitness levels then Yogfitz’s online yoga classes is the place for you.</p>
           </div>
-          <!-- <div class="d-flex justify-content-evenly p-4">
-                  <i class="bi bi-facebook"></i>
-                  <i class="bi bi-linkedin"></i>
-                  <i class="bi bi-envelope-fill"></i>
-                  <i class="bi bi-whatsapp"></i>
-              </div> -->
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="assets/user3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Leanne Graham</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, neque.</p>
+            <h5 class="card-title">Aditi Sen</h5>
+            <p class="card-text">I feel like doing yoga all day, attend all online yoga classes because your trainers are amazingly good ! Best for weight loss</p>
           </div>
-          <!-- <div class="d-flex justify-content-evenly p-4">
-                  <i class="bi bi-facebook"></i>
-                  <i class="bi bi-linkedin"></i>
-                  <i class="bi bi-envelope-fill"></i>
-                  <i class="bi bi-whatsapp"></i>
-              </div> -->
         </div>
       </div>
       <div class="col">
         <div class="card">
           <img src="assets/newuser3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Leanne Graham</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, neque.</p>
+            <h5 class="card-title">Lina Dutta</h5>
+            <p class="card-text">Taking part in the YogFitz Yoga programme training has been a life changing experience. The tutors here are very good and professional.</p>
           </div>
-          <!-- <div class="d-flex justify-content-evenly p-4">
-                  <i class="bi bi-facebook"></i>
-                  <i class="bi bi-linkedin"></i>
-                  <i class="bi bi-envelope-fill"></i>
-                  <i class="bi bi-whatsapp"></i>
-              </div> -->
         </div>
       </div>
 
@@ -152,18 +134,18 @@
       <div class="contact-info">
         <h3 class="title">Let's get in touch</h3>
         <p class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          dolorum adipisci recusandae praesentium dicta!
+          At YogFitz, we bring yoga at the comfort of your home
+          We are a trusted name in the field of yoga with more than twelve thousands of happy customers with ten plus years of experience and highly trained yoga teachers.
         </p>
 
         <div class="info">
           <div class="information">
             <img src="img/location.png" class="icon" alt="" />
-            <p>92 Cherry Drive Uniondale, NY 11553</p>
+            <p>XJ3V+5HP, Embassy Golf Links Road, Bengaluru</p>
           </div>
           <div class="information">
             <img src="img/email.png" class="icon" alt="" />
-            <p>lorem@ipsum.com</p>
+            <p>support@yogfitz.com</p>
           </div>
           <div class="information">
             <img src="img/phone.png" class="icon" alt="" />
@@ -177,15 +159,9 @@
             <a href="https://www.facebook.com/profile.php?id=61559753650133">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <!-- <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a> -->
             <a href="https://www.instagram.com/vs_viveksingh_/?hl=en">
               <i class="fab fa-instagram"></i>
             </a>
-            <!-- <a href="#">
-                <i class="fab fa-linkedin-in"></i>
-              </a> -->
           </div>
         </div>
       </div>
