--- a/classes.html
+++ b/classes.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="header-call-info">
                         <span class="d-block">Call Now</span>
-                        <a class="d-block" href="tel:+15143125678">+1 (514) 312-5678</a>
+                        <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                     </div>
                 </div>
                 <div class="header-button">
