--- a/Blog.html
+++ b/Blog.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="header-call-info">
                         <span class="d-block">Call Now</span>
-                        <a class="d-block" href="tel:+15143125678">+1 (514) 312-5678</a>
+                        <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                     </div>
                 </div>
                 <div class="header-button">
