fix-contact-button-colour

--- a/Contact.html
+++ b/Contact.html
@@ -224,9 +224,9 @@
   <script src="main.js"></script>
   <script>
     var currentPage = window.location.href;
-    if (currentPage.includes("Contact.html")) {
+    if (currentPage.toLowerCase().includes("contact")) {
         document.querySelector('.header-button a').classList.add('btn-success');
-      }
+    }
   </script>
 </body>
 
