fix-membership-buttons

--- a/Memebership.html
+++ b/Memebership.html
@@ -178,7 +178,7 @@
           <p>Group trainer</p>
           <p>Live & Interactive Classes</p>
           <p>Doubt Session</p>
-          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
+          <a href="Contact.html#contactform" class="btn-membership membership__btn">GET STARTED</a>
         </div>
         <div class="membership__card col-lg-4 col-md-12">
           <h4>3 MONTH CARD</h4>
@@ -189,7 +189,7 @@
           <p>Personal Sessions</p>
           <p>Fitness Goal Setting</p>
           <p>Diet Chart</p>
-          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
+          <a href="Contact.html#contactform" class="btn-membership membership__btn">GET STARTED</a>
         </div>
         <div class="membership__card col-lg-3 col-md-12">
           <h4>YEAR CARD</h4>
@@ -200,7 +200,7 @@
           <p>Dedicated Batch</p>
           <p>Personlized Health Planning</p>
           <p>Many More...</p>
-          <a href="Contact.html#contactform" class="btn membership__btn">GET STARTED</a>
+          <a href="Contact.html#contactform" class="btn-membership membership__btn">GET STARTED</a>
         </div>
       </div>
     </div>
