--- a/Memebership.html
+++ b/Memebership.html
@@ -164,9 +164,9 @@
     <div class="section__container membership__container">
       <p class="section__subheader">PRICING TABLE</p>
       <h2 class="section__header">Membership Cards</h2>
-      <div class="membership__grid container row" style="margin-left: 4rem;">
+      <div class="membership__grid container grid_style" >
 
-        <div class="membership__card col-lg-3 col-md-12">
+        <div class="membership__card col-lg-4">
           <div class="app-download">
             <label id="first-title">Best Seller</label>
           </div> 
@@ -180,7 +180,8 @@
           <p>Doubt Session</p>
           <a href="Contact.html#contactform" class="btn-membership membership__btn">GET STARTED</a>
         </div>
-        <div class="membership__card col-lg-4 col-md-12">
+        <div class="membership__card col-lg-4" style="margin-top: 1rem;">
+          <div class="ribbon">Recommended</div>
           <h4>3 MONTH CARD</h4>
           <h2><sup>₹</sup>1799</h2>
           <h3>For 3 Month</h3>
@@ -191,7 +192,7 @@
           <p>Diet Chart</p>
           <a href="Contact.html#contactform" class="btn-membership membership__btn">GET STARTED</a>
         </div>
-        <div class="membership__card col-lg-3 col-md-12">
+        <div class="membership__card col-lg-4">
           <h4>YEAR CARD</h4>
           <h2><sup>₹</sup>6999</h2>
           <h3>For 1 YEAR</h3>
