fix-contact-responsiveness

--- a/classes.html
+++ b/classes.html
@@ -291,7 +291,7 @@
                 <img class="play-icon" src="images/play-icon.png" alt="">
             </div>
             
-            <h3>Record High Quality Videos</h3>
+            <h3>Yoga For Calmness</h3>
 
             
         </div>
