--- a/Contact.html
+++ b/Contact.html
@@ -28,7 +28,7 @@
   <title>YogFitz</title>
 </head>
 
-<body>
+<body style="width: 100%;">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light main-header sticky-top">
     <div class="container-fluid">
