--- a/Stories.html
+++ b/Stories.html
@@ -11,6 +11,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- whatsapp coursel -->
+  <link rel="stylesheet" href="whatsapp.css">
+
+  
+  
+   <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="stylesheet" href="about.css">
 
      <!-- navbar imports -->
      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet"> 
@@ -27,7 +40,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
-  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <link rel="icon" href="img/yoga1.png" type="image/x-icon" />
   <title>YogFitz</title>
 </head>
 
@@ -37,7 +50,7 @@
     <div class="container-fluid">
 
         <a class="navbar-brand logo-size"  href="index.html">
-            <img src="assets/logo.png" alt="">
+            <img src="img/yoga1.png" alt="">
             <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -65,7 +78,8 @@
                         <span> <i class="fas fa-phone-volume"></i> </span>
                     </div>
                     <div class="header-call-info">
-                        <span class="d-block">Call Now</span>
+                        <a style="
+                        color: red"  href="https://wa.me/916387622153" class="d-block">Click to connect </a>
                         <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                     </div>
                 </div>
@@ -158,70 +172,109 @@
     </button>
   </div>
 
+  
+  <section class="about-seciton py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="about-image">
+                    <img src="img/yoga1.png" alt="">
+                    <div class="about-img-text">
+                        <div class="about-text-innter">
+                            <h2>2</h2>
+                            <p> Years Of Experience </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="about-text">
+                    <div class="finix-text">
+                        <h2>Empowering Your Wellness Journey with Two Years of Dedicated Yoga Instruction.</h2>
+                        <p>At Yogfit, we provide the convenience of yoga in the comfort of your own home. With over 2 thousand satisfied clients, two years of experience, and a team of highly trained yoga instructors, we are a trusted name in the yoga industry. Our services are ideal for beginners seeking to practice yoga at home.
+                          Yogfit is a online yoga company dedicated to delivering professional yet friendly yoga instruction directly to you. We specialize in facilitating online yoga sessions, corporate stress management programs, and holistic yoga programs for schools. Regardless of your space, location, experience level, flexibility, or strength, all our sessions and programs are tailored to meet your individual needs. </strong>
+                        <ul>
+                            <li>Online Platform for yoga</li>
+                            <li>experienced Yoga Trainer</li>
+                            <li>Personalized Sessions</li>
+                        </ul>
+                        <a href="https://wa.me/916387622153" class="btn btn-primary">Join Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
-  <section class="section__container stories__container" id="stories">
-    <p class="section__subheader">TESTIMONY</p>
-    <h2 class="section__header">Successful Stories</h2>
-    <div class="stories__grid">
-      <div class="stories__card">
-        <div class="stories__content">
-          <span><i class="ri-double-quotes-l"></i></span>
-          <p>
-            This yoga website has been a game-changer for me. The variety of
-            classes and guided sessions have not only improved my flexibility
-            but also brought a sense of calm to my hectic days.
-          </p>
-        </div>
-        <div class="stories__author">
-          <img src="assets/stories-1.jpg" alt="author" />
-          <div class="stories__author__details">
-            <h4>Emily Williams</h4>
-            <h6>Trainer</h6>
-          </div>
-        </div>
+
+
+<section class="section__container stories__container m-b-5 p-5" id="stories" style="margin-bottom: 25px !important;">
+  <!-- <p class="section__subheader">TESTIMONY</p> -->
+  <h2 class="section__header">Successful Stories</h2>
+  <div class="stories__grid">
+    <div class="stories__card">
+      <div class="stories__content">
+        <span><i class="ri-double-quotes-l"></i></span>
+        <p>
+          This yoga website has been a game-changer for me. The variety of
+          classes and guided sessions have not only improved my flexibility
+          but also brought a sense of calm to my hectic days.
+        </p>
       </div>
-      <div class="stories__card">
-        <div class="stories__content">
-          <span><i class="ri-double-quotes-l"></i></span>
-          <p>
-            The tailored sessions and expert guidance have not only eased my
-            discomfort but also boosted my overall well-being. A fantastic
-            resource for both beginners and experienced yogis.
-          </p>
-        </div>
-        <div class="stories__author">
-          <img src="assets/stories-2.jpg" alt="author" />
-          <div class="stories__author__details">
-            <h4>Ava Johnson</h4>
-            <h6>Member</h6>
-          </div>
-        </div>
-      </div>
-      <div class="stories__card">
-        <div class="stories__content">
-          <span><i class="ri-double-quotes-l"></i></span>
-          <p>
-            The on-demand classes allow me to practice whenever I can, and the
-            mindfulness exercises have brought a new level of clarity to my
-            life.A must-visit for anyone seeking holistic wellness.
-          </p>
-        </div>
-        <div class="stories__author">
-          <img src="assets/stories-3.jpg" alt="author" />
-          <div class="stories__author__details">
-            <h4>Sophia Smith</h4>
-            <h6>Member</h6>
-          </div>
+      <div class="stories__author">
+        <img class="image-circle" src="assets/photos-3.jpg" alt="author" />
+        <div class="stories__author__details">
+          <h4>Riya Srivastava</h4>
+          <h6>User</h6>
         </div>
       </div>
     </div>
-  </section>
+    <div class="stories__card">
+      <div class="stories__content">
+        <span><i class="ri-double-quotes-l"></i></span>
+        <p>
+          The tailored sessions and expert guidance have not only eased my
+          discomfort but also boosted my overall well-being. A fantastic
+          resource for both beginners and experienced yogis.
+        </p>
+      </div>
+      <div class="stories__author">
+        <img class="image-circle" src="assets/front-view-man-meditating-outdoors.jpg" alt="author" />
+        <div class="stories__author__details">
+          <h4>Ali Sharma</h4>
+          <h6>User</h6>
+        </div>
+      </div>
+    </div>
+    <div class="stories__card">
+      <div class="stories__content">
+        <span><i class="ri-double-quotes-l"></i></span>
+        <p>
+          The on-demand classes allow me to practice whenever I can, and the
+          mindfulness exercises have brought a new level of clarity to my
+          life.A must-visit for anyone seeking holistic wellness.
+        </p>
+      </div>
+      <div class="stories__author">
+        <img class="image-circle" src="assets/stories-3.jpg" alt="author" />
+        <div class="stories__author__details">
+          <h4>Sophia Smith</h4>
+          <h6>User</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <body>
     <div id="includedContent"></div>
   </body>
+  
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-85f3038b-3fe1-47e4-a48e-67eaf8483867" data-elfsight-app-lazy></div>
 
   <script src="footer.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </body>
