--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,8 @@
                         <span> <i class="fas fa-phone-volume"></i> </span>
                     </div>
                     <div class="header-call-info">
-                        <span class="d-block">Call Now</span>
+                        <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
                         <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                     </div>
                 </div>
@@ -849,6 +850,8 @@
 
     <!-- Optional JavaScript -->
     <!-- Popper.js first, then Bootstrap JS -->
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-85f3038b-3fe1-47e4-a48e-67eaf8483867" data-elfsight-app-lazy></div>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
   </body>
