--- a/fullweb.html
+++ b/fullweb.html
@@ -58,7 +58,8 @@
                         <span> <i class="fas fa-phone-volume"></i> </span>
                     </div>
                     <div class="header-call-info">
-                        <span class="d-block">Call Now</span>
+                        <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
                         <a class="d-block" href="tel:+15143125678">+1 (514) 312-5678</a>
                     </div>
                 </div>
