--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="contact.css" />
   <link rel="stylesheet" href="contactcard.css" />
   <script src="https://unpkg.com/scrollreveal"></script>
-  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <link rel="icon" href="img/yoga1.png" type="image/x-icon" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>YogFitz</title>
 </head>
@@ -32,50 +32,50 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light main-header sticky-top">
     <div class="container-fluid">
-  
-      <a class="navbar-brand logo-size" href="index.html">
-        <img src="assets/logo.png" alt="">
-        <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  
-        <ul class="navbar-nav ml-auto our-primary-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="classes.html">Classes</a></li>
-          <li><a href="Memebership.html">Membership</a></li>
-          <li><a href="Stories.html">About</a></li>
-          <li><a href="Blog.html">Blog</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
-  
-        <div class="header-info d-flex align-items-center">
-          <div class="header-search">
-  
-          </div>
-          <div class="header-call clearfix"
-          style="margin-right: 50%;">
-            <div class="header-call-icon float-left mr-3 h-100">
-              <span> <i class="fas fa-phone-volume"></i> </span>
+
+        <a class="navbar-brand logo-size"  href="index.html">
+            <img src="img/yoga1.png" alt="">
+            <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav ml-auto our-primary-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="Memebership.html">Membership</a></li>
+                <li><a href="Stories.html">About</a></li>
+                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+
+            <div class="header-info d-flex align-items-center">
+                <div class="header-search">
+
+                </div>
+                <div class="header-call clearfix">
+                    <div class="header-call-icon float-left mr-3 h-100">
+                        <span> <i class="fas fa-phone-volume"></i> </span>
+                    </div>
+                    <div class="header-call-info">
+                        <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
+                        <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
+                    </div>
+                </div>
+                <div class="header-button">
+                    <a href="Contact.html#contactform" class="btn btn-primary">Enroll Now</a>
+                </div>
             </div>
-            <div class="header-call-info">
-              <span class="d-block">Call Now</span>
-              <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
-            </div>
-          </div>
-          <div class="header-button">
-            <a href="Contact.html#contactform" class="btn-contact btn-primary-contact" style="margin-left: -120px;">Enroll Now</a>
-          </div>
+
         </div>
-  
-      </div>
-  
+
     </div>
-  </nav>
+</nav>
 
   <header id="home">
     <div class="section__container header__container" style="margin-top: 12px;">
@@ -163,6 +163,9 @@
             <a href="https://www.instagram.com/vs_viveksingh_/?hl=en">
               <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://wa.me/916387622153">
+              <i class="fab fa-whatsapp"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -226,7 +229,8 @@
     </div>
   </footer>
 
-
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-85f3038b-3fe1-47e4-a48e-67eaf8483867" data-elfsight-app-lazy></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
