--- a/Memebership.html
+++ b/Memebership.html
@@ -28,7 +28,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
-  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <link rel="icon" href="img/yoga1.png" type="image/x-icon" />
   <title>YogFitz</title>
 </head>
 
@@ -38,7 +38,7 @@
     <div class="container-fluid">
   
       <a class="navbar-brand logo-size"  href="index.html">
-        <img src="assets/logo.png" alt="">
+        <img src="img/yoga1.png" alt="">
         <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -66,7 +66,8 @@
               <span> <i class="fas fa-phone-volume"></i> </span>
             </div>
             <div class="header-call-info">
-              <span class="d-block">Call Now</span>
+              <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
               <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
             </div>
           </div>
