--- a/classes.html
+++ b/classes.html
@@ -27,7 +27,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
-  <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+  <link rel="icon" href="img/yoga1.png" type="image/x-icon" />
   <title>YogFitz</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
     <div class="container-fluid">
 
         <a class="navbar-brand logo-size"  href="index.html">
-            <img src="assets/logo.png" alt="">
+            <img src="img/yoga1.png" alt="">
             <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -65,7 +65,8 @@
                         <span> <i class="fas fa-phone-volume"></i> </span>
                     </div>
                     <div class="header-call-info">
-                        <span class="d-block">Call Now</span>
+                        <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
                         <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                     </div>
                 </div>
@@ -164,10 +165,9 @@
             <div class="col-lg-6">
                 <div class="why-us-text">
                     <div class="finix-text">
-                        <h6>  Transparent process  </h6>
                         <h2>Why people choose us</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <img src="img/choose.png" alt="">
+                        <img src="img/yoga1.png" alt="">
                         <a href="#" class="paly-animation-btn"> <i class="fas fa-play-circle"></i> </a>
                     </div>
                 </div>
@@ -233,37 +233,49 @@
       <div class="classes__image">
         <img src="assets/classes-1.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+          <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="classes__image">
         <img src="assets/classes-2.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+           <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="classes__image">
         <img src="assets/classes-3.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+           <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="classes__image">
         <img src="assets/classes-4.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+           <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="classes__image">
         <img src="assets/classes-5.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+           <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="classes__image">
         <img src="assets/classes-6.jpg" alt="classes" />
         <div class="classes__content">
-          <button class="btn classes__btn">View More</button>
+           <a class="btn" href="https://wa.me/916387622153">Join Us
+            <i class="fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
     </div>
@@ -301,7 +313,7 @@
 
 <div class="video">
     <video controls autoplay class="videoPlayer">
-        <source src="videos/video1.mp4" type="video/mp4">
+        <source src="" type="video/mp4">
     </video>
 
     <div class="close-btn">+</div>
@@ -316,6 +328,8 @@
     <script src="video.js"></script>
 
   <script src="footer.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+  <div class="elfsight-app-85f3038b-3fe1-47e4-a48e-67eaf8483867" data-elfsight-app-lazy></div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </body>
