--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- navbar import ends -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/logo.png" type="image/x-icon" />
+    <link rel="icon" href="img/yoga1.png" type="image/x-icon" />
     <title>YogFitz</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
       <div class="container-fluid">
 
           <a class="navbar-brand logo-size"  href="index.html">
-              <img src="assets/logo.png" alt="">
+              <img src="img/yoga1.png" alt="">
               <h3 style="margin-top: 14px; margin-left: 5px;">YOGFITZ</h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -67,7 +67,8 @@
                           <span> <i class="fas fa-phone-volume"></i> </span>
                       </div>
                       <div class="header-call-info">
-                          <span class="d-block">Call Now</span>
+                          <a style="
+                        color: red"   href="https://wa.me/916387622153" class="d-block">Click to connect </a>
                           <a class="d-block" href="tel:+15143125678">+91-6387622153</a>
                       </div>
                   </div>
@@ -333,6 +334,8 @@
     </body>
 
     <script src="footer.js"></script>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-85f3038b-3fe1-47e4-a48e-67eaf8483867" data-elfsight-app-lazy></div>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
   </body>
