fix-contact-enroll-now-button

--- a/Contact.html
+++ b/Contact.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="header-button">
-                    <a href="Contact.html#contactform" class="btn btn-primary">Enroll Now</a>
+                    <a href="Contact.html#contactform" class="btn btn-primary-contact">Enroll Now</a>
                 </div>
             </div>
 
